# NoSlouchBench

./: .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
configs/: models.yaml
scripts/: autostart_macos.sh  download_pose_landmarker.py  run_model_week.sh  schedule_reports.sh  screen_blocker.swift
src/noslouchbench/: __init__.py  audio.py  camera.py  cli.py  config.py  habits_report.py  report.py  runner.py  screen_blocker.py  system_lock.py  video_analysis.py
src/noslouchbench/detectors/: __init__.py  base.py  factory.py  mediapipe_pose.py  yolo_pose.py
tests/: test_habits_report.py
